Fix info drawer title to not overlap close button on small tablets

--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ h3 {
 }
 
 h5 {
-	font-size: 1.3em;
+	font-size: 1.2em;
 	font-weight: 200;
-	margin-top: 6px;
+	margin-top: 10px;
 	margin-bottom: 6px;
 }
 
